--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -9,6 +9,8 @@
   "projectile_upkick": 7.5,
   "projectile_height_offset": -0.5,
   "projectile_forward_offset": 1.6,
+  "projectile_min_angular_velocity": { "x": 1, "y": 1, "z": 3 },
+  "projectile_max_angular_velocity": { "x": 2, "y": 2, "z": 6 },
   "gravity": -30.0,
   "bullet_max_steps": 5,
 
