--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -21,7 +21,7 @@
     "spline_stepsize": 700.0,
     "track_height": -1.89,
     "texture_tile_size": 25.0,
-    "material": "materials/Lake_daytime.fplmat",
+    "material": "materials/lake_daytime.fplmat",
     "shader": "shaders/origwater",
     "default_banks": [
       { "x_min": -8.5, "x_max": -13.5, "z_min": 3.5, "z_max": 6.2 },
@@ -203,7 +203,7 @@
     "entity_files": [
       "entity_rails.bin",
       "entity_list.bin",
-      "entity_level0.bin",
+      "entity_level_0.bin",
       "entity_decorations.bin",
       "entity_ring.bin"
     ]
