--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -287,6 +287,8 @@ set(zooshi_SRCS
     src/gui.cpp
     src/inputcontrollers/gamepad_controller.cpp
     src/inputcontrollers/gamepad_controller.h
+    src/inputcontrollers/onscreen_controller.cpp
+    src/inputcontrollers/onscreen_controller.h
     src/inputcontrollers/mouse_controller.cpp
     src/inputcontrollers/mouse_controller.h
     src/main.cpp
