Clear FLATBUFFERS_GENERATED_INCLUDES before appending to it.
When this package includes other projects that use the
FLATBUFFERS_GENERATED_INCLUDES variable to build up a list of
generated headers, the FLATBUFFERS_GENERATED_INCLUDES variable
grows to contain *all* headers for *all* libraries leading to
order dependent build errors.

Tested:
Verified everything builds on Linux.

Change-Id: Ieab218df7a36723d288d790b66c5e108fe9e6a08

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,7 @@ file(GLOB_RECURSE FLATBUFFERS_SCHEMAS ${CMAKE_SOURCE_DIR}/src/*.fbs)
 
 # Generate rules to build the set of output files from the set of input
 # schema files.
+unset(FLATBUFFERS_GENERATED_INCLUDES)
 foreach(flatbuffers_schema ${FLATBUFFERS_SCHEMAS})
   get_filename_component(filename ${flatbuffers_schema} NAME_WE)
   set(flatbuffers_include
