--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -125,8 +125,8 @@
       },
       {
         "zone_start": 0.99,
-        "material": "materials/riverbank_grass_daytime.fplmat",
-      },
+        "material": "materials/riverbank_grass_daytime.fplmat"
+      }
     ],
     "river_index": 3,
     "default_width": 5.0,
@@ -135,7 +135,8 @@
       "Projectile"
     ],
     "mass": 1000.0,
-    "restitution": 0.5
+    "restitution": 0.5,
+    "user_tag": "Ground"
   },
 
   "rendering_config" : {
