Disable pindrop_demo build in Zooshi.
Tested:
Built Zooshi for Linux and verified the pindrop_demo is no longer
being built.

Change-Id: I36131275279deb4f6cb61a0f054831110a22f0a8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ option(zooshi_profile_motive "Output motive profiling stats." OFF)
 
 # Include pindrop.
 if(NOT zooshi_only_flatc AND NOT TARGET pindrop)
+  set(pindrop_build_demo OFF CACHE BOOL "")
   add_subdirectory("${dependencies_pindrop_dir}" ${tmp_dir}/pindrop)
 endif()
 
