Changed river rendering to be better on low-end devices
Changed the math in rendering the river, so that it would have
fewer problems on devices with low floating-point percision.
Set the river texture coords to always fall within the [0-1]
range, and made the passed-in time value no longer grow unbounded.

Change-Id: I5b5eaf09b662dc3d9b683dc0ce6795d41fa0764f

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -17,6 +17,8 @@
   "cardboard_viewport_angle": 1.570796, // 90 degrees
 
   "river_config" : {
+    "speed" : 0.3,
+    "texture_repeats" : 16,
     "rail_filename": "rails/player_path.bin",
     "spline_stepsize": 700.0,
     "track_height": -1.89,
