Add file extensions to FlatBuffer files.
We were using the default "bin" for many files.

Tested: Runs on Linux and Android.
Change-Id: Ic824c9464d84236026a05bccd6b4574a70b72d6b

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,28 @@
 # Git ignore file for zooshi:
-*.bin
-*.fplmat
-*.fplmesh
-*.fplanim
-*.webp
 apks/
+assets/*.pinbus
+assets/*.pinconfig
+assets/*.zooassets
+assets/*.zooconfig
+assets/*.zooentity
+assets/*.zooinconfig
+assets/anims/
+assets/flatbufferschemas/
+assets/fonts/
+assets/graphs/
+assets/materials/
+assets/meshes/
+assets/rails/
+assets/shaders/font.*
+assets/shaders/font_*
+assets/sound_banks/*.pinbank
+assets/sounds/*.pinsound
+assets/textures/
 bin/
 fplbase_assets/
 gen/
 libs/
 obj/
-assets/flatbufferschemas/
-assets/*.json
-assets/fonts/
-assets/shaders/font.*
-assets/shaders/font_*
-assets/graphs/
 
 # CMake files
 CMakeCache.txt
