--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,13 +30,9 @@ limitations under the License.
                   android:label="@string/app_name"
                   android:screenOrientation="sensorLandscape"
                   android:configChanges="orientation|keyboardHidden|screenSize">
-            <!-- Tell NativeActivity the name of the .so -->
-            <meta-data android:name="android.app.lib_name"
-                       android:value="zooshi" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <category android:name="com.google.intent.category.CARDBOARD" />
             </intent-filter>
         </activity>
         <activity android:name="ZooshiTvActivity"
@@ -46,6 +42,15 @@ limitations under the License.
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="ZooshiHmdActivity"
+                  android:label="@string/app_name"
+                  android:screenOrientation="sensorLandscape"
+                  android:configChanges="orientation|keyboardHidden|screenSize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.google.intent.category.CARDBOARD" />
             </intent-filter>
         </activity>
         <meta-data android:name="com.google.android.gms.games.APP_ID"
