--- a/disttools/config.json
+++ b/disttools/config.json
@@ -17,14 +17,6 @@
       "push": 0
     },
     {
-      "name": "googletest",
-      "url": "http://github.com/google/fplutil.git",
-      "branch": "googletest",
-      "is_library": 1,
-      "third_party": 0,
-      "push": 0
-    },
-    {
       "name": "flatbuffers",
       "url": "http://github.com/google/flatbuffers.git",
       "branch": "master",
@@ -38,7 +30,8 @@
       "branch": "develop",
       "is_library": 1,
       "third_party": 0,
-      "push": 0
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
       "name": "pindrop",
@@ -46,7 +39,8 @@
       "branch": "develop",
       "is_library": 1,
       "third_party": 0,
-      "push": 0
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
       "name": "motive",
@@ -54,109 +48,53 @@
       "branch": "develop",
       "is_library": 1,
       "third_party": 0,
-      "push": 0
-    },
-    {
-      "name": "vectorial",
-      "url": "http://github.com/google/mathfu.git",
-      "branch": "vectorial",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 0
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
       "name": "fplbase",
-      "url": "http://github.com/google/zooshi.git",
-      "branch": "fplbase",
+      "url": "http://github.com/google/fplbase.git",
+      "branch": "develop",
       "is_library": 1,
       "third_party": 0,
-      "push": 1
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
-      "name": "sdl",
-      "url": "http://github.com/google/zooshi.git",
-      "branch": "sdl",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 1
-    },
-    {
-      "name": "sdl_mixer",
-      "url": "http://github.com/google/zooshi.git",
-      "branch": "sdl_mixer",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 1
-    },
-    {
-      "name": "webp",
-      "url": "https://chromium.googlesource.com/webm/libwebp",
-      "branch": "0.4.1",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 0
-    },
-    {
-      "name": "libogg",
-      "url": "https://git.xiph.org/mirrors/ogg.git",
-      "branch": "master",
-      "revision": "ab78196fd59ad7a329a2b19d2bcec5d840a9a21f",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 0
-    },
-    {
-      "name": "libvorbis",
-      "url": "https://git.xiph.org/mirrors/vorbis.git",
-      "branch": "master",
-      "revision": "ec345eee8c5af00154b237f67509c96b43cfa8a7",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 0
-    },
-    {
-      "name": "imgui",
-      "url": "http://github.com/google/zooshi.git",
-      "branch": "imgui",
+      "name": "flatui",
+      "url": "http://github.com/google/flatui.git",
+      "branch": "develop",
       "is_library": 1,
       "third_party": 0,
-      "push": 1
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
-      "name": "freetype",
-      "url": "git://git.sv.nongnu.org/freetype/freetype2.git",
-      "branch": "master",
-      "revision": "f353a38e87a894a0a3280f5e27278831a1a2aaad",
+      "name": "entity",
+      "url": "http://github.com/google/entity.git",
+      "branch": "develop",
       "is_library": 1,
-      "third_party": 1,
-      "push": 0
+      "third_party": 0,
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
-      "name": "harfbuzz",
-      "url": "http://github.com/behdad/harfbuzz.git",
-      "branch": "master",
-      "revision": "aee685086c8fde6f6c4590e483a177c19f222540",
+      "name": "breadboard",
+      "url": "http://github.com/google/breadboard.git",
+      "branch": "develop",
       "is_library": 1,
-      "third_party": 1,
-      "push": 0
+      "third_party": 0,
+      "push": 0,
+      "fetch_dependencies": 1
     },
     {
-      "name": "libunibreak",
-      "url": "https://github.com/adah1972/libunibreak.git",
-      "branch": "master",
-      "revision": "0e8e32dcd0d8f9d2744026bef591b16af1ddd0ff",
+      "name": "scene_lab",
+      "url": "http://github.com/google/scene_lab.git",
+      "branch": "develop",
       "is_library": 1,
-      "third_party": 1,
-      "push": 0
-    },
-    {
-      "name": "bulletphysics",
-      "url": "http://github.com/bulletphysics/bullet3.git",
-      "branch": "master",
-      "revision": "30ebb322285809bde98959e10e73e5acb9981efc",
-      "is_library": 1,
-      "third_party": 1,
-      "push": 0
+      "third_party": 0,
+      "push": 0,
+      "fetch_dependencies": 1
     }
   ]
 }
