Added support for overlay directories.
Tested:
Verified it's possible to load assets from an overlay directory by
specifying the directory name on the command line.

Load game with "newstuff" overlay
- Desktop
$ ./bin/zooshi newstuff
- Android
$ adb shell am start -a android.intent.action.VIEW \
    -d "http://google.github.io/zooshi/launch/default/newstuff" \
    com.google.fpl.zooshi

Load game with default assets
- Desktop
$ ./bin/zooshi
- Android
$ adb shell am start -a android.intent.action.VIEW \
    -d "http://google.github.io/zooshi/launch/default/default" \
    com.google.fpl.zooshi

Bug: 25373475
Change-Id: I2666dd06b65168fd4e9e76210506fcfa053df9c9

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ assets/shaders/font_*
 assets/sound_banks/*.pinbank
 assets/sounds/*.pinsound
 assets/textures/
+assets/overlays/
 bin/
 fplbase_assets/
 gen/
