--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,62 +19,91 @@ limitations under the License.
           android:versionCode="11"
           android:versionName="1.0">
 
-    <!-- This .apk has no Java code itself, so set hasCode to false. -->
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
-                 android:banner="@drawable/tv_banner"
-                 android:allowBackup="true"
-                 android:isGame="true"
-                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        <activity android:name="ZooshiActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="sensorLandscape"
-                  android:configChanges="orientation|keyboardHidden|screenSize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="ZooshiTvActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="landscape"
-                  android:configChanges="orientation|keyboardHidden|screenSize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="ZooshiHmdActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="sensorLandscape"
-                  android:configChanges="orientation|keyboardHidden|screenSize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="com.google.intent.category.CARDBOARD" />
-            </intent-filter>
-        </activity>
-        <meta-data android:name="com.google.android.gms.games.APP_ID"
-                   android:value="@string/app_id" />
-        <meta-data android:name="com.google.android.gms.version"
-                   android:value="@integer/google_play_services_version"/>
-    </application>
+  <!-- This .apk has no Java code itself, so set hasCode to false. -->
+  <application android:label="@string/app_name"
+               android:icon="@drawable/ic_launcher"
+               android:banner="@drawable/tv_banner"
+               android:allowBackup="true"
+               android:isGame="true"
+               android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+    <activity android:name="ZooshiActivity"
+              android:label="@string/app_name"
+              android:screenOrientation="sensorLandscape"
+              android:configChanges="orientation|keyboardHidden|screenSize"
+              android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+      <intent-filter name="@string/app_name">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http"
+              android:host="google.github.io"
+              android:pathPrefix="/zooshi/launch/default" />
+      </intent-filter>
+    </activity>
+    <activity android:name="ZooshiTvActivity"
+              android:label="@string/app_name"
+              android:screenOrientation="landscape"
+              android:configChanges="orientation|keyboardHidden|screenSize"
+              android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+      </intent-filter>
+      <intent-filter name="@string/app_name">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http"
+              android:host="google.github.io"
+              android:pathPrefix="/zooshi/launch/tv" />
+      </intent-filter>
+    </activity>
+    <activity android:name="ZooshiHmdActivity"
+              android:label="@string/app_name"
+              android:screenOrientation="sensorLandscape"
+              android:configChanges="orientation|keyboardHidden|screenSize"
+              android:exported="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="com.google.intent.category.CARDBOARD" />
+      </intent-filter>
+      <intent-filter name="@string/app_name">
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http"
+              android:host="google.github.io"
+              android:pathPrefix="/zooshi/launch/hmd" />
+      </intent-filter>
+    </activity>
+    <meta-data android:name="com.google.android.gms.games.APP_ID"
+               android:value="@string/app_id" />
+    <meta-data android:name="com.google.android.gms.version"
+               android:value="@integer/google_play_services_version"/>
+  </application>
 
-    <!-- Minimum for SDL -->
-    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
+  <!-- Minimum for SDL -->
+  <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
 
-    <!-- OpenGL ES 2.0 -->
-    <uses-feature android:glEsVersion="0x00020000" />
+  <!-- OpenGL ES 2.0 -->
+  <uses-feature android:glEsVersion="0x00020000" />
 
-    <!-- Allow accessing the internet for analytics and gpg -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <!-- Allow accessing the internet for analytics and gpg -->
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!-- Allow access to the NFC reader for Cardboard to use  -->
-    <uses-permission android:name="android.permission.NFC" />
+  <!-- Allow access to the NFC reader for Cardboard to use  -->
+  <uses-permission android:name="android.permission.NFC" />
 
-    <!-- Optionally uses gamepad -->
-    <uses-feature android:name="android.hardware.gamepad" android:required="false"/>
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+  <!-- Optionally uses gamepad -->
+  <uses-feature android:name="android.hardware.gamepad" android:required="false"/>
+  <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
+  <!-- Expose Google Play Services version for Google Search -->
+  <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 </manifest>
 <!-- END_INCLUDE(manifest) -->
