Move skinning.glslv_h to fplbase.
Tested: Clean Mac and Android builds, build and run fine.
Change-Id: Ief89b67eab4d694fb90589856f10570b8153a7cf

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ assets/meshes/
 assets/rails/
 assets/shaders/font.*
 assets/shaders/font_*
+assets/shaders/fplbase/
 assets/sound_banks/*.pinbank
 assets/sounds/*.pinsound
 assets/textures/
