Set the river speed to scale with the raft.
The river now flows only slightly faster than the raft is
traveling, and speeds up as the raft speeds up.  This should
make it less disorienting when traveling at high speeds, as
the river will still be keeping up with you and giving you a
stable reference point.

Also fixes a minor graphical bug where the river would flow even
when the game was paused.

Change-Id: Ic0afd348f26c0004497b11968a237c82cb3f936d

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -17,7 +17,7 @@
   "cardboard_viewport_angle": 1.570796, // 90 degrees
 
   "river_config" : {
-    "speed" : 0.3,
+    "speed_boost" : 0.5,
     "texture_repeats" : 16,
     "rail_filename": "rails/player_path.rail",
     "spline_stepsize": 700.0,
