Reference corgi repo when building submodules.
Tested:
Verified that it's possible to stage a Zooshi git repo locally.

Change-Id: Ia3bb0d757e45f6ff047e48b2700782980401ff15

--- a/disttools/config.json
+++ b/disttools/config.json
@@ -70,8 +70,8 @@
       "fetch_dependencies": 1
     },
     {
-      "name": "entity",
-      "url": "http://github.com/google/entity.git",
+      "name": "corgi",
+      "url": "http://github.com/google/corgi.git",
       "branch": "develop",
       "is_library": 1,
       "third_party": 0,
