Changed reference to pindrop_demo to pindrop_sample.
Tested on Linux and Windows.

Change-Id: I021995440f621ef935e2ca67e6e2dff4b02f1086

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ option(zooshi_profile_motive "Output motive profiling stats." OFF)
 
 # Include pindrop.
 if(NOT TARGET pindrop)
-  set(pindrop_build_demo OFF CACHE BOOL "")
+  set(pindrop_build_sample OFF CACHE BOOL "")
   set(pindrop_build_tests OFF CACHE BOOL "")
   set(pindrop_async_loading ON CACHE BOOL "")
   add_subdirectory("${dependencies_pindrop_dir}" ${tmp_dir}/pindrop)
