Don't build CORGI tests when building Zooshi.
Change-Id: I0e67c34e54cb6e6860b64c0c12077504021b6175
Tested: Works on Mac.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,8 @@ endif()
 
 # Include entities.
 if(NOT TARGET corgi)
+  # Don't build the CORGI tests. Just build CORGI itself.
+  set(corgi_build_tests OFF CACHE BOOL "")
   add_subdirectory("${dependencies_corgi_dir}" ${tmp_dir}/corgi)
 endif()
 
