Fixed the font not resetting after world editing.
When you would exit from Scene Lab, the fonts would appear
to be messed up.

To fix this, I added a line to both the Main Menu and Pause Menu
to explicitly set the correct font before rendering them (where
as before we were "assuming" the font was correct, and simply
setting a text color).

I also moved the fonts into config.fbs/config.json.

Change-Id: Ibf73c619b3b37ace6eb04fef87193320aa397af9
Tested: Tested on Ubuntu by entering Scene Lab mode, and exiting.
Also tested on Android to confirm it builds and all fonts work
as expected.

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -1,6 +1,12 @@
 {
   "window_title": "Zooshi!",
 
+  "license_font":"fonts/NotoSans-Bold.ttf",
+
+  "menu_font":"fonts/RaviPrakash-Regular.ttf",
+
+  "score_font":"fonts/NotoSans-Bold.ttf",
+
   "audio_config": "audio_config.pinconfig",
 
   "input_config": "input_config.zooinconfig",
