--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -343,7 +343,10 @@ set(C_FLAGS_WARNINGS "")
 if(MSVC)
   # C4127: Conditional expression is constant.
   # C4305: Truncation from 'type1' to 'type2'.
-  set(C_FLAGS_WARNINGS "/W4 /WX /wd4127 /wd4305")
+  # C4577: 'noexcept' used with no exception handling mode specified.
+  set(C_FLAGS_WARNINGS "/W4 /WX /wd4127 /wd4305 /wd4577")
+  set(CMAKE_CXX_FLAGS "/MP")
+  add_definitions(-DNOMINMAX -D_HAS_EXCEPTIONS=0 -D_CRT_SECURE_NO_WARNINGS)
 elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
        CMAKE_COMPILER_IS_CLANGXX)
   add_definitions(-g)
