Implemented basic shadows.
Added new shaders for static and animated entities, as well as the banks.
There are new shaders for rendering the shadow map on animated entities
as well as for rendering shadows.

In config.json, shadows can be turned on by setting render_shadows to
true.

Tested:
Works on Linux, Nexus 5X, and Nexus 9.

Change-Id: I48d39af06a911dfc42ccfd2f9449574d9b670a73

--- a/src/rawassets/overlays/santa/config.json
+++ b/src/rawassets/overlays/santa/config.json
@@ -144,6 +144,7 @@
   },
 
   "rendering_config" : {
+    "render_shadows": false,
     "shadow_map_resolution": 512,
     "shadow_map_zoom": 2.0,
     "shadow_map_offset": 6.0,
