Render Zooshi score with FlatUI.
First, I removed the old DigitComponent, which manually
rendered textures for each digit of the score.

I added a Render3dTextComponent that uses FlatUI to render
text in 3D world space (on an entity). A Breadboard graph
can be used to update the string rendered by the
Render3dTextComponent.

For entities that wish to have the score rendered on them,
they can use the graph `src/rawassets/graphs/string.json`.
This graph concatenates a string consisting of the current
score, using the new node in `src/modules/ui_string.cpp`,
every frame and updates the Render3dTextData appropriately.

Currently, the font used by FlatUI is the same as the font
used for the menu: `RaviPrakash-Regular.ttf`.

Tested: Tested on Ubuntu and Android.

Change-Id: I93ff6d15f69891758726666a892d01c4d0302bde

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,8 +200,6 @@ set(zooshi_SRCS
     src/components/attributes.h
     src/components/audio_listener.cpp
     src/components/audio_listener.h
-    src/components/digit.cpp
-    src/components/digit.h
     src/components/lap_dependent.cpp
     src/components/lap_dependent.h
     src/components/patron.cpp
@@ -214,6 +212,8 @@ set(zooshi_SRCS
     src/components/rail_denizen.h
     src/components/rail_node.cpp
     src/components/rail_node.h
+    src/components/render_3d_text.cpp
+    src/components/render_3d_text.h
     src/components/river.cpp
     src/components/river.h
     src/components/scenery.cpp
@@ -256,6 +256,8 @@ set(zooshi_SRCS
     src/modules/rail_denizen.h
     src/modules/state.cpp
     src/modules/state.h
+    src/modules/ui_string.cpp
+    src/modules/ui_string.h
     src/modules/zooshi.cpp
     src/modules/zooshi.h
     src/railmanager.cpp
